fixed alignment of submenu

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Exo:ital,wght@1,500;1,900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -18,8 +19,9 @@ nav {
   font-size: 24px;
   line-height: 55px;
   float: left;
-  padding: 0px 20px;
+  padding: 4px 20px;
   text-decoration: none;
+  font-weight: 900;
 }
 nav ul {
   float: left;
@@ -28,31 +30,34 @@ nav ul li {
   float: left;
   list-style: none;
   position: relative;
+  padding: 2px;
+  line-height: 2.1;
 }
 nav ul li a {
   display: block;
-  font-family: arial;
+  font-family: Chakra Petch;
   color: #001372;
-  font-size: 14px;
-  padding: 22px 14px;
+  font-size: 20px;
+  padding: 8px 40px;
   text-decoration: none;
 }
 nav ul li ul {
   display: none;
   position: absolute;
   background-color: darkgray;
-  padding: 10px;
+  padding: 0px;
   border-radius: 0px 0px 8px 8px;
 }
 nav ul li:hover ul {
   display: block;
 }
 nav ul li ul li a {
-  padding: 8px 14px;
+  padding: 20px 14px;
 }
 nav ul li ul li {
-  width: 200px;
+  width: 300px;
   border-radius: 4px;
+  padding: 0px 0px;
 }
 nav ul li ul li a:hover {
   background-color: #f3f3f3;
